--- a/search/src/main/AndroidManifest.xml
+++ b/search/src/main/AndroidManifest.xml
@@ -6,12 +6,7 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
-        <activity android:name=".SearchActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".SearchActivity"/>
     </application>
 
 </manifest>
